# The-Woodland-Revenant

./: .gitignore  README.md  README.txt  external_resources.txt
Tasking/: December-07-2023.txt  November-16-2023.txt  November-23-2023.txt  November-30-2023.txt
resources/: blur_fp.glsl  drunk_fp.glsl  impassable.csv  lit_color_fp.glsl  lit_color_vp.glsl  lit_textured_material_fp.glsl  lit_textured_material_vp.glsl  pixelated_fp.glsl  sign.customf  sign.customv  terrain.heightfield  terrain_fp.glsl  terrain_vp.glsl  textured_material_fp.glsl  textured_material_vp.glsl  textured_particle_gp.glsl  textured_particle_vp.glsl
resources/OG Terrain/: terrain.heightfield
resources/Shaders/: lit_textured_material_fp.glsl  lit_textured_material_instanced_fp.glsl  lit_textured_material_instanced_vp.glsl  lit_textured_material_vp.glsl  particle_insect_gp.glsl  particle_insect_vp.glsl  skybox_fp.glsl  skybox_vp.glsl  terrain_fp.glsl  terrain_vp.glsl  textured_particle_fp.glsl
resources/Shaders/Screen-Space_Shaders/: ScreenSpace_vp.glsl  blank_fp.glsl  bloody_fp.glsl  blur_fp.glsl  night_vision_fp.glsl  pixelated_fp.glsl  wavering_fp.glsl
resources/skybox/: liscense.txt
src/: CMakeLists.txt  CMakeSettings.json  camera.cpp  camera.h  entities.cpp  entities.h  game.cpp  game.h  ghost.cpp  ghost.h  instanced_object.cpp  instanced_object.h  interactable_node.cpp  interactable_node.h  main.cpp  model_loader.h  path_config.h  renderable.cpp  renderable.h  resource.h  resource_manager.cpp  resource_manager.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  skybox.cpp  skybox.h
